add PQ training benchmark (#482)
* add PQ training benchmark
* add PQ distance benchmark
* Index construction benchmark to include PQ

Signed-off-by: Samuel Herman <sherman8915@gmail.com>

---------

Signed-off-by: Samuel Herman <sherman8915@gmail.com>